# MyCMake

./: .gitmodules  CMakeLists.txt  TODO.md
apps/: CMakeLists.txt  main.cpp
